--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@keyframes FadeIn {
+  from {
+      opacity: 0;}
+    to {
+      opacity: 1;}
+}
 html,
 body {
  background-color: #000000;
@@ -7,7 +13,10 @@ body {
 h1 {
 color: #53ff;
 }
-hr {
+p {
+    color: white;
+}
+hr:not(#UpgradeHR) {
     height: 10px;
     color: chartreuse;
     background-color: purple;
@@ -17,5 +26,43 @@ button {
  background-color: rgb(65, 105, 225);
  border-radius: 10px;
  border-color: rgb(65, 75, 255);
- font-size: 20px;
+ font-size: 50px;
+}
+
+aside {
+  border: none;
+  border-top: 15px double aqua;
+  color: crimson;
+  overflow: visible;
+  text-align: center;
+  height: 15px;
+}
+#UpgradeHR {
+  border: none;
+  text-align: center;
+  vertical-align: center;
+  background-color: blue;
+  border-radius: 200px;
+  height: 50px;
+ font-size: 40px;
+}
+#UpgradeHR::after {
+    color: aqua;
+  content: 'UPGRADES';
+  position: relative;
+  font-weight: bolder;
+}
+.U {
+  opacity: 0;
+}
+.U.visible {
+  opacity: 1;
+  animation-duration: 1s;
+  animation-name: FadeIn
+  
+}
+#SAVE {
+  left: 90%;
+  bottom: 90%;
+  position: fixed;
 }
